# CopyClip

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ico.py  install.sh  main.py  pyproject.toml  requirements.txt  skills-lock.json  test_clipboard_detection.py  vcpkg.json
.claude/: settings.json
.claude/hooks/: _hook_lib.py  format.py  tidy.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
code/: clipboard.py  history_manager.py  hotkeys.py  ui.py
copyclip/: __init__.py
copyclip/core/: __init__.py  clipboard.py  history.py  settings.py
copyclip/hotkeys/: __init__.py  backend_base.py  backend_wayland.py  backend_x11.py  config.py  manager.py
copyclip/ui/: __init__.py  main_window.py
copyclip/ui/dialogs/: __init__.py  first_run.py  settings.py
copyclip/ui/styles/: __init__.py  themes.py
copyclip/ui/widgets/: __init__.py  clickable_label.py  clip_frame.py  feedback_label.py
copyclip/utils/: __init__.py  constants.py  environment.py  single_instance.py
packaging/: CMakeLists.txt  dev.walkercito.CopyClip.desktop
packaging/scripts/: postinst
scripts/: appimage.sh  ico.py  install.sh  install_hotkey.sh  memcheck.sh  register_hotkey.sh  smoke.sh  uninstall_hotkey.sh
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt  Factory.cpp  Factory.hpp  ManualHotkeyListener.cpp  ManualHotkeyListener.hpp  PortalHotkeyListener.cpp  PortalHotkeyListener.hpp  QtClipboardSource.cpp  QtClipboardSource.hpp  X11HotkeyListener.cpp  X11HotkeyListener.hpp  X11Modifiers.hpp
src/app/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  Constants.cpp  Constants.hpp
src/core/: CMakeLists.txt  ClipboardEngine.cpp  ClipboardEngine.hpp  Enums.hpp  Hash.cpp  Hash.hpp  HistoryService.cpp  HistoryService.hpp  Hotkeys.cpp  Hotkeys.hpp  Interfaces.hpp  Models.hpp  Platform.cpp  Platform.hpp  SettingsService.cpp  SettingsService.hpp  SystemClock.hpp  placeholder.cpp
src/core/detail/: AsciiCase.hpp
src/runtime/: CMakeLists.txt  Logging.cpp  Logging.hpp  SingleInstanceGuard.cpp  SingleInstanceGuard.hpp
src/storage/: CMakeLists.txt  JsonSettingsRepository.cpp  JsonSettingsRepository.hpp  SqliteHistoryRepository.cpp  SqliteHistoryRepository.hpp
src/ui/: Application.cpp  Application.hpp  CMakeLists.txt  ClipText.cpp  ClipText.hpp  Constants.hpp  CopyAction.cpp  CopyAction.hpp  Fuzzy.cpp  Fuzzy.hpp  GdkClipboardSource.cpp  GdkClipboardSource.hpp  GnomeShortcut.cpp  GnomeShortcut.hpp  KeyAction.cpp  KeyAction.hpp  KeystrokePaster.cpp  KeystrokePaster.hpp  MainWindow.cpp  MainWindow.hpp  Paster.cpp  Paster.hpp  ShortcutText.cpp  ShortcutText.hpp  StatusNotifierItem.cpp  StatusNotifierItem.hpp  Theme.cpp  Theme.hpp  main.cpp
src/ui/dialogs/: FirstRunDialog.cpp  FirstRunDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/ui/widgets/: ClipCard.cpp  ClipCard.hpp  ShortcutChooser.cpp  ShortcutChooser.hpp
tests/: CMakeLists.txt
tests/adapters/: CMakeLists.txt  FactoryTest.cpp  ManualHotkeyListenerTest.cpp  QtClipboardSourceTest.cpp  X11ModMaskTest.cpp
tests/config/: CMakeLists.txt  ConstantsTest.cpp
tests/core/: CMakeLists.txt  ClipboardEngineTest.cpp  EnumsTest.cpp  HashTest.cpp  HistoryServiceTest.cpp  HotkeysTest.cpp  InterfacesTest.cpp  ModelsTest.cpp  PlatformTest.cpp  SettingsServiceTest.cpp
tests/runtime/: CMakeLists.txt  LoggingTest.cpp  SingleInstanceGuardTest.cpp
tests/storage/: CMakeLists.txt  JsonSettingsRepositoryTest.cpp  SqliteHistoryRepositoryTest.cpp
tests/support/: Fakes.hpp  ScopedEnv.hpp  TempDir.hpp
tests/ui/: CMakeLists.txt  ClipTextTest.cpp  CopyActionTest.cpp  FuzzyTest.cpp  KeyActionTest.cpp  ShortcutTextTest.cpp
